Closed Bug 374508 Opened 17 years ago Closed 17 years ago

Log if we can't translate an ldap error and fix some warnings in nsLDAPOperation.cpp

Categories

(MailNews Core :: LDAP Integration, defect)

defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: standard8, Assigned: standard8)

References

Details

Attachments

(1 file)

Attached patch The fixSplinter Review
Bug 374361 has shown that we aren't translating all ldap errors properly. This shouldn't affect the running/error handling of ldap too much, but does reduce the capability for debug to give us what errors are really occurring.

I'm tempted to say we should just log all non-success errors in the TranslateLDAPErrorToNSError function, but this is just the case where we can't translate it for now.

I'm also including changes to fix compiler warnings of the kind:

nsLDAPOperation.cpp:254: warning: value computed is not used
Attachment #259022 - Flags: superreview?(bienvenu)
Attachment #259022 - Flags: review?(bienvenu)
Comment on attachment 259022 [details] [diff] [review]
The fix

thx, Mark
Attachment #259022 - Flags: superreview?(bienvenu)
Attachment #259022 - Flags: superreview+
Attachment #259022 - Flags: review?(bienvenu)
Attachment #259022 - Flags: review+
Patch checked in -> fixed.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: