Bug 374508 Log if we can't translate an ldap error and fix some warnings in nsLDAPOperation.cpp. r/sr=bienvenu